# nk

./: .envrc  .gitignore  Cargo.toml  README.md  devshell.toml  install.ps1  install.sh  readme.md  sample.yml
.cargo/: config.toml
.github/workflows/: build.yml  bump.yml  release.yml  validate.yml
.hooks/: pre-commit
scripts/: initial-setup.sh  release.sh
src/: args.rs  config.rs  eval.rs  main.rs  merge.rs  render.rs  resolve.rs  vars.rs
src/commands/: completion.rs  help.rs  helper.rs  link.rs  mod.rs  pack.rs  plugin.rs  provision.rs  resolve.rs  var.rs  version.rs
src/eval/: eval.rs  mod.rs
src/extensions/: mod.rs  pico_args.rs  serde_deserialize.rs  vec_os_string.rs
src/merge/: merge.rs  mod.rs
src/plugins/: load.rs  manifest.rs  mod.rs  plugin.rs
src/plugins/utils/: bash.sh
src/render/: mod.rs  render.rs
src/resolve/: mod.rs  resolve.rs
src/root/: mod.rs  root.rs
src/sort/: mod.rs  sort.rs
src/state/: condition.rs  declaration.rs  file.rs  group.rs  machine.rs  mod.rs  role.rs
src/traits/: from_with_name.rs  mod.rs
src/utils/: deserialize_map_to_named.rs  deserialize_map_to_vec_of_named.rs  mod.rs
src/vars/: mod.rs  vars.rs
