[package]
name = "nk"
version = "0.15.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[dependencies]
pico-args = "0.5.0"
const_format = "0.2.26"
indoc = "1.0.7"
shellexpand = "2.1.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
regex = "1.6.0"
serde_with = "2.0.1"
rhai = { version = "1.10.1", features = [
    "no_closure",
    "no_custom_syntax",
    "serde",
] }
hostname = "0.3.1"
serde_json = "1.0.85"
console = "0.15.2"
textwrap = "0.15.1"
handlebars = "4.3.5"
whoami = "1.2.3"
home = "0.5.4"
os_info = { version = "3.5.1", default-features = false }
itertools = "0.10.5"
jsonschema = "0.16.1"
topological-sort = "0.2.2"
lazy_static = "1.4.0"
octocrab = "0.17.0"
tokio = { version = "1.22.0", features = ["full"] }
reqwest = { version = "0.11.13", features = ["stream"] }
async-compression = { version = "0.3.15", features = ["futures-io", "gzip"] }
futures = "0.3.25"
# TODO: remove async-std once fixed in async-tar
async-std = { version = "1.6.0", features = ["unstable"] }
async-tar = "0.4.2"
