[package]
name = "nicky"
version = "0.34.0"
edition = "2021"
description = "configuration management for developers"
license = "MIT"
repository = "https://github.com/ciiqr/nk"
keywords = ["configuration", "management", "dotfiles"]
categories = ["command-line-utilities"]

[[bin]]
name = "nk"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[dependencies]
shellexpand = "3.1.0"
serde = { version = "1.0.213", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.11.1"
serde_with = "3.11.0"
rhai = { version = "1.19.0", features = [
    "no_closure",
    "no_custom_syntax",
    "serde",
] }
hostname = "0.4.0"
serde_json = "1.0.132"
console = "0.15.8"
textwrap = "0.16.1"
handlebars = "6.1.0"
whoami = "1.5.2"
home = "0.5.9"
os_info = { version = "3.8.2", default-features = false }
itertools = "0.13.0"
jsonschema = "0.25.1"
topological-sort = "0.2.2"
lazy_static = "1.5.0"
tokio = { version = "1.41.0", features = ["full"] }
reqwest = { version = "0.12.8", features = ["stream"] }
async-compression = { version = "0.4.17", features = ["futures-io", "gzip"] }
futures = "0.3.31"
async-tar = "0.5.0"
# NOTE: statically link openssl
openssl = { version = "0.10.68", features = ["vendored"] }
clap = { version = "4.5.20", features = ["derive"] }
clap_complete = "4.5.35"
faccess = "0.2.4"
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4.42"
flate2 = "1.0.34"
path-clean = "1.0.1"
